# semantic_web_project

./: .env.example  CHANGELOG.md  PIPELINE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SPARQL_QUERIES.md  TOOLS.md  VISUALIZATION_README.md  hydrate_jmbx_tweets.py  persuasion_ontology.ttl  pipeline_implementation.py  pyproject.toml  requirements.txt  requirements_viz.txt  visualize.py
data/input/: posts.json
data/input/processed/: falcon_processed.csv  falcon_processed.json  posts.csv  posts.json
data/input/unprocessed/: jmbx_dataset.csv
data/output/: annotated_posts.json-ld  annotated_posts.ttl  example_annotated.ttl  pipeline_stats.json
data/output/processed/: falcon_processed.csv
docs/: PIPELINE.md  TOOLS.md
notebooks/: 01_tools_usage.ipynb  02_nlp_llm_tools_intro.ipynb  03_data_preprocessing.ipynb  04_experimental_results.ipynb
reports/: dataset_stats.md  datasets_exploratory_analysis.md  presentation_milestone_4.md  presentation_milestone_5.md  presentation_milestone_6.md  technical_report.md
scripts/: check_muse_dataset.py  generate_dataset_stats.py  process_datasets.py
